2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (IT_DISPLAYING_WHITESPACE): Define for
	!HAVE_WINDOW_SYSTEM.
	(move_it_in_display_line_to, move_it_in_display_line_to)
	(display_line): Remove #ifdef HAVE_WINDOW_SYSTEM.

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2009-06-21  Jason Rumney  <jasonr@gnu.org>

	* w32term.c (keyboard_codepage): New static variable.
	(w32_read_socket) [WM_INPUTLANGCHANGE]: Update it.
	(w32_read_socket) [WM_CHAR]: Use it to decode character
	input (bug#3237).
	(w32_initialize): Initialize it.
	(codepage_for_locale): New function.

2009-06-20  Ken Raeburn  <raeburn@raeburn.org>

	* process.c (status_message): Pass Faset index argument as a lisp
	object, so as to work with USE_LISP_UNION_TYPE.

2009-06-19  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* coding.c (Ffind_coding_systems_region_internal):
	Cache checked characters.

2009-06-18  Kenichi Handa  <handa@m17n.org>

	* coding.c (decode_coding_iso_2022): Check MSB of bytes more
	rigidly.

2009-06-18  Andreas Schwab  <aschwab@redhat.com>

	* xdisp.c (redisplay_internal): Check that the frame is still
	live after redisplay of its windows.
	(redisplay_windows): Check that the window is still live.

2009-06-17  Andreas Schwab  <schwab@linux-m68k.org>

	* coding.c (detect_coding_utf_16): Fix previous change.

2009-06-16  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_utf_16): Fix the logic of rejecting
	UTF-16 by checking the dispersion of Eth and Oth bytes.

2009-06-15  Andreas Schwab  <schwab@linux-m68k.org>

	* coding.c (detect_coding_utf_16): Fix typo counting odd bytes.

2009-06-15  Kenichi Handa  <handa@m17n.org>

	* process.c (status_message): Fix previous change.  Be sure to
	decode a localized string.

2009-06-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xterm.c (x_delete_terminal): Put previous change in #if 0 and
	add comment explaining why.

2009-06-14  Sidney Markowitz  <sidney@sidney.com>
